# omaha-oracle

./: .coverage  .env.example  .gitignore  .gitignore.bak  ARCHITECTURE.md  CLAUDE.md  DASHBOARD-AUDIT.md  DASHBOARD-PERF-ISSUES.md  DASHBOARD-UX-ISSUES.md  GO-LIVE-CHECKLIST.md  OVERNIGHT_REPORT.md  README.md  RUNBOOK.md  VISUAL-QA-REPORT.md  cdk.json  mobile-remote-setup.txt  pyproject.toml  repo_structure.txt  run_dashboard.py  setup.py  sharing-dashboard.txt  skills-lock.json
.claude/: settings.json  settings.local.json
.claude/scripts/: score-component.py
.claude/skills/git-guardian/: SKILL.md
.claude/skills/parallel-code-review/: SKILL.md
.claude/skills/systematic-code-review/: SKILL.md
.github/workflows/: claude.yml  deploy.yml  merge-test.yml  test.yml
.streamlit/: config.toml  secrets.toml.example
docs/: omaha_oracle_build_plan_v2.md
docs/brainstorms/: 2026-03-27-decision-journaling-requirements.md
docs/ideation/: 2026-03-27-open-ideation.md
docs/plans/: 2026-03-27-001-feat-decision-journaling-predictions-plan.md  2026-03-29-001-refactor-parallelize-moat-mgmt-iv-plan.md
infra/: app.py  cdk.json  filter.json  key.json  names.json  response.json
infra/stacks/: analysis_stack.py  data_stack.py  monitoring_stack.py  portfolio_stack.py
prompts/: anti_style_drift_guardrail.md  lesson_extraction.md  management_assessment.md  moat_analysis.md  owners_letter.md  prediction_extraction.md  thesis_generation.md
scripts/: quality_gate_search.py
src/: __init__.py
src/analysis/: __init__.py
src/analysis/intrinsic_value/: __init__.py  handler.py  models.py
src/analysis/management_quality/: __init__.py  handler.py  prompts.py
src/analysis/merge_results/: __init__.py  handler.py
src/analysis/moat_analysis/: __init__.py  handler.py  prompts.py
src/analysis/quant_screen/: __init__.py  financials.py  handler.py  metrics.py  piotroski.py  screener.py
src/backtesting/: engine.py  q_table.json  rl_env.py  rl_train.py
src/dashboard/: __init__.py  alpaca_auth.py  alpaca_client.py  alpaca_errors.py  alpaca_models.py  alpaca_session.py  analysis_runner.py  analytics.py  app.py  candidate_generator.py  charts.py  data.py  fmt.py  health_score.py  options_chain.py  options_orders.py  scenario.py  search_config.py  search_runner.py  sidebar.py  styles.py  upload_storage.py  upload_validator.py  watchlist_manager.py
src/ingestion/: __init__.py
src/monitoring/: __init__.py
src/portfolio/: __init__.py
src/shared/: __init__.py  analysis_client.py  config.py  converters.py  cost_tracker.py  dynamo_client.py  evaluated_store.py  firecrawl_client.py  http_client.py  lessons_client.py  llm_client.py  logger.py  portfolio_helpers.py  s3_client.py  sec_client.py
tests/: conftest.py
tests/e2e/: conftest.py  test_regression.py  test_search_e2e.py  test_upload_e2e.py
tests/fixtures/: __init__.py  mock_data.py
tests/integration/: __init__.py  conftest.py  test_analysis_pipeline.py  test_feedback_loop.py  test_ingestion.py
tests/manual/: debug_all_pe_pb.py  debug_quant.py  debug_screen_aapl.py  debug_screen_detail.py  test_postmortem.py  test_quant_screen.py  test_yahoo_local.py
tests/unit/: test_backtesting.py  test_buy_sell_logic.py  test_config_settings.py  test_cost_tracker.py  test_dashboard_nav.py  test_execution.py  test_guardrails.py  test_intrinsic_value.py  test_lessons_client.py  test_position_sizer.py  test_postmortem.py  test_quant_screen.py  test_self_improvement_bugs.py  test_silent_failure_bugs.py  test_watchlists.py
(+137 files in other folders)
