[project]
name = "omaha-oracle"
version = "0.1.0"
description = "Omaha Oracle — Autonomous value investing agent built on Graham-Dodd-Buffett principles"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "requests>=2.32.4",
    "yfinance>=0.2.36",
    "anthropic>=0.40",
    "alpaca-py>=0.25",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.37.0",
    "pandas>=2.0",
    "plotly>=5.18",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "moto>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pip-audit>=2.7",
    "boto3-stubs[essential]>=1.34",
]
infra = [
    "aws-cdk-lib>=2.177.0",
    "constructs>=10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests hitting real APIs (deselect with '-m \"not e2e\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true